# v2x_remote_driving

./: README.md  tod_operator
tod_common/pvd_msgs/: CMakeLists.txt  package.xml
tod_common/pvd_msgs/msg/: PVD_data.msg
tod_common/tod_core/: CMakeLists.txt  package.xml
tod_common/tod_core/include/tod_core/: BaseParameterHandler.h  YamlLoader.h
tod_common/tod_core/src/: BaseParameterHandler.cpp
tod_common/tod_helper/: CMakeLists.txt  package.xml
tod_common/tod_helper/include/tod_helper/vehicle/: Model.h  Parameters.h
tod_common/tod_launch/: CMakeLists.txt  package.xml
tod_common/tod_launch/launch/: operator.launch  vehicle.launch
tod_common/tod_launch/launch/operator/: operator_control.launch  operator_operator_interface.launch  operator_vehicle_interface.launch  operator_video.launch
tod_common/tod_launch/launch/vehicle/: vehicle_control.launch  vehicle_operator_interface.launch  vehicle_vehicle_interface.launch  vehicle_video.launch
tod_common/tod_msgs/: CMakeLists.txt  package.xml
tod_common/tod_msgs/include/tod_msgs/: VehicleEnums.h  inputDevice.h  joystickConfig.h
tod_common/tod_msgs/msg/: ControlCmd.msg  PVD_data.msg  PacketInfo.msg  SafetyDriverStatus.msg  Status.msg  VehicleData.msg
tod_common/tod_msgs/srv/: InputDevice.srv
tod_common/tod_network/: CMakeLists.txt  package.xml
tod_common/tod_network/include/tod_network/: connection_configs.h  db_v2x.h  mqtt_client.h  mqtt_client_templated.h  tod_client.h  tod_server.h  udp_client.h  udp_server.h  v2x_control_command.h  v2x_defs.h  v2x_ext_type.h  v2x_pvd.h
tod_common/tod_network/src/: CMakeLists.txt  mqtt_client.cpp  mqtt_client_templated.cpp  tod_client.cpp  tod_server.cpp  udp_client.cpp  udp_server.cpp
tod_control/: CMakeLists.txt  package.xml
tod_control/launch/: tod_control.launch
tod_control/src/operator/: CMakeLists.txt  CommandCreator.cpp  CommandCreator.h  CommandCreatorNode.cpp  ControlCommandSender.cpp  ForceFeedbackController.cpp  ForceFeedbackController.h  ForceFeedbackControllerNode.cpp  OperatorNetworkNode.cpp
tod_control/src/vehicle/: CMakeLists.txt  ControlCommandReceiver.cpp
tod_input_devices/: CMakeLists.txt  package.xml
tod_input_devices/config/: virtual.yaml
tod_input_devices/src/: CMakeLists.txt  InputDeviceController.cpp  InputDeviceNode.cpp  RosInterface.cpp  RosInterface.h  UsbEventHandlerNode.cpp
tod_input_devices/src/General/: InputDevice.cpp  InputDevice.h
tod_input_devices/src/UsbEventDevice/: bitmaskros.h
tod_input_devices/src/UsbInputDevice/: Correction.h  UsbInputDevice.h
tod_input_devices/src/VirtualDevice/: VirtualInputDevice.h
tod_operator/tod_input_devices/config/: g29_ff.yaml
tod_operator/tod_input_devices/src/: InputDeviceController.h
tod_operator/tod_input_devices/src/UsbEventDevice/: UsbEventDevice.cpp  UsbEventDevice.h
tod_operator/tod_input_devices/src/UsbInputDevice/: UsbInputDevice.cpp
tod_operator/tod_input_devices/src/VirtualDevice/: VirtualInputDevice.cpp
tod_operator/tod_manager/: CMakeLists.txt  package.xml
tod_operator/tod_manager/config/: V2X_Config.yaml
tod_operator/tod_manager/launch/: tod_manager.launch  tod_manager_xavier.launch
tod_operator/tod_manager/src/common/: IPv4ValidityChecker.cpp  IPv4ValidityChecker.h  IpAddrValidityChecker.h  QtWidgetGroup.cpp  QtWidgetGroup.h  rosthread.h  v2xHeaderDeserializer.h  v2xManagerWindow.cpp  v2xManagerWindow.h
tod_operator/tod_manager/src/common/ui/: v2xManagerWindow.ui
tod_operator/tod_manager/src/common/ui/resources/: resources.qrc
tod_operator/tod_manager/src/operator/: CMakeLists.txt  OperatorManager.cpp  OperatorManager.h  OperatorManagerNode.cpp
tod_operator/tod_manager/src/vehicle/: CMakeLists.txt  VehicleManager.cpp  VehicleManager.h  VehicleManagerNode.cpp
tod_operator/tod_manager/vehicle_xavier/: CMakeLists.txt  VehicleManagerXavier.cpp  VehicleManagerXavier.h  VehicleManagerXavierNode.cpp
tod_vehicle/tod_kona_bridge/: CMakeLists.txt  package.xml
tod_vehicle/tod_kona_bridge/launch/: novatel_driver.launch  tod_kona_bridge.launch
tod_vehicle/tod_kona_bridge/scripts/: CanOpen.sh  vcanOpen.bash
tod_vehicle/tod_kona_bridge/src/: CMakeLists.txt  kona_control_send_node.cpp  kona_data_recv_node.cpp
tod_vehicle/tod_vehicle_bridge/: CMakeLists.txt  package.xml
tod_vehicle/tod_vehicle_bridge/include/vehicle_bridge/: vehicle_tyep.h
tod_vehicle/tod_vehicle_bridge/launch/: tod_vehicle_bridge.launch
tod_vehicle/tod_vehicle_bridge/src/operator/: CMakeLists.txt  PVDReceiver.cpp  VehicleDataReceiver.cpp
tod_vehicle/tod_vehicle_bridge/src/vehicle/: CMakeLists.txt  PVDSender.cpp  VehicleDataSender.cpp  vehicle_to_PVD_Node.cpp
